@@ -9,6 +9,7 @@ Changelog of flooding
 
 - Added buildout config file for task 200 server.
 
+- Add correct 'EXTERNAL_RESULTS_MOUNTED_DIR' etc to stagingsettings
 
 1.27.1 (2012-10-22)
 -------------------
